[project]
name = "llm-interace"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.45.1",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "openai>=1.60.1",
    "python-dotenv>=1.0.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
